--- a/app/src/main/res/layout/activity_customer_food_details.xml
+++ b/app/src/main/res/layout/activity_customer_food_details.xml
@@ -152,7 +152,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:fontFamily="sans-serif"
-        android:text="Thịt xay\nBì lợn\nGia vị\nBún tươi\nRau sống"
+        android:text="Thịt xay\nBì lợn\nGia vị"
         android:lineSpacingMultiplier="1.3"
         android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
@@ -160,20 +160,45 @@
         app:layout_constraintStart_toStartOf="@+id/textView25"
         app:layout_constraintTop_toBottomOf="@+id/textView25" />
 
+    <TextView
+        android:id="@+id/textView26"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:fontFamily="@font/consolasligaturizedv3"
+        android:text="Đánh giá"
+        android:textColor="@color/black"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toEndOf="@+id/detailsFoodIngredients"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/detailsFoodIngredients"
+        app:layout_constraintTop_toBottomOf="@+id/detailsFoodIngredients" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/orderFeedbackRecyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_margin="8dp"
+        tools:listitem="@layout/feedback_item"
+        app:layout_constraintBottom_toTopOf="@+id/addItemButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView26" />
+
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/addItemButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
         android:background="@drawable/addtocartshape"
-        android:text="Thêm vào giỏ"
         android:fontFamily="@font/consolasligaturizedv3"
-        android:textSize="18sp"
+        android:text="Thêm vào giỏ"
         android:textAllCaps="false"
         android:textColor="@color/white"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/detailsFoodIngredients" />
+        app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
