--- a/app/src/main/res/layout/fragment_congrats_bottom_sheet.xml
+++ b/app/src/main/res/layout/fragment_congrats_bottom_sheet.xml
@@ -14,6 +14,7 @@
         android:orientation="vertical">
 
         <TextView
+            android:id="@+id/resultMessage"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
@@ -25,7 +26,7 @@
             android:textSize="28dp" />
 
         <ImageView
-            android:id="@+id/imageView5"
+            android:id="@+id/resultIcon"
             android:layout_width="250dp"
             android:layout_height="250dp"
             android:layout_gravity="center"
