--- a/app/src/main/res/layout/activity_customer_login.xml
+++ b/app/src/main/res/layout/activity_customer_login.xml
@@ -101,6 +101,18 @@
         app:layout_constraintTop_toBottomOf="@+id/email" />
 
     <TextView
+        android:id="@+id/forgotPasswordButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:fontFamily="@font/consolasligaturizedv3"
+        android:text="Quên mật khẩu?"
+        android:textColor="@color/textColor"
+        android:textSize="16sp"
+        app:layout_constraintEnd_toEndOf="@+id/password"
+        app:layout_constraintTop_toBottomOf="@+id/password" />
+
+    <TextView
         android:id="@+id/textView10"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -111,7 +123,7 @@
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="@+id/password"
         app:layout_constraintStart_toStartOf="@+id/password"
-        app:layout_constraintTop_toBottomOf="@+id/password" />
+        app:layout_constraintTop_toBottomOf="@+id/forgotPasswordButton" />
 
     <TextView
         android:id="@+id/textView11"
